add translation context

--- a/po/de/syndic.po
+++ b/po/de/syndic.po
@@ -56,6 +56,7 @@ msgctxt "AbstractFeedEditorPage|"
 msgid "Fetch updates:"
 msgstr "Abholen Aktualisierungen:"
 
+#. take the value from application settings
 #: src/qml/AbstractFeedEditorPage.qml:72 src/qml/AbstractFeedEditorPage.qml:128
 msgctxt "AbstractFeedEditorPage|"
 msgid "Use Global Setting"
