--- a/po/hr/syndic.po
+++ b/po/hr/syndic.po
@@ -1,17 +1,17 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: syndic-translate@rocksandpaper.com\n"
-"PO-Revision-Date: 2022-07-02 12:14+0000\n"
+"PO-Revision-Date: 2022-10-21 21:06+0000\n"
 "Last-Translator: Milo Ivir <mail@milotype.de>\n"
-"Language-Team: Croatian <https://hosted.weblate.org/projects/syndic/app/hr/"
-">\n"
+"Language-Team: Croatian <https://hosted.weblate.org/projects/syndic/app/hr/>"
+"\n"
 "Language: hr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 4.13.1-dev\n"
+"X-Generator: Weblate 4.14.2-dev\n"
 "X-Qt-Contexts: true\n"
 
 #: src/qml/ArticleList/AbstractArticleListPage.qml:39
@@ -57,7 +57,7 @@ msgstr "Kategorija:"
 #: src/qml/AbstractFeedEditorPage.qml:70
 msgctxt "AbstractFeedEditorPage|"
 msgid "Always load web content"
-msgstr ""
+msgstr "Uvijek učitaj web sadržaj"
 
 #: src/qml/AbstractFeedEditorPage.qml:87
 msgctxt "AbstractFeedEditorPage|"
@@ -168,7 +168,7 @@ msgstr "Ostavi kao nepročitano"
 #: src/qml/ArticlePage.qml:69
 msgctxt "ArticlePage|"
 msgid "Show Web Content"
-msgstr ""
+msgstr "Prikaži web sadržaj"
 
 #: src/qml/EditFeedPage.qml:21
 msgctxt "EditFeedPage|"
