--- a/po/ca/syndic.po
+++ b/po/ca/syndic.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: syndic-translate@rocksandpaper.com\n"
-"PO-Revision-Date: 2022-07-27 14:24+0000\n"
+"PO-Revision-Date: 2022-12-10 23:52+0000\n"
 "Last-Translator: Adolfo Jayme Barrientos <fitojb@ubuntu.com>\n"
 "Language-Team: Catalan <https://hosted.weblate.org/projects/syndic/app/ca/>\n"
 "Language: ca\n"
@@ -9,13 +9,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.14-dev\n"
+"X-Generator: Weblate 4.15-dev\n"
 "X-Qt-Contexts: true\n"
 
 #: src/qml/ArticleList/AbstractArticleListPage.qml:39
 msgctxt "AbstractArticleListPage|"
 msgid "All Read"
-msgstr ""
+msgstr "Tot llegit"
 
 #: src/qml/ArticleList/AbstractArticleListPage.qml:39
 msgctxt "AbstractArticleListPage|"
@@ -55,7 +55,7 @@ msgstr "Categoria:"
 #: src/qml/AbstractFeedEditorPage.qml:70
 msgctxt "AbstractFeedEditorPage|"
 msgid "Always load web content"
-msgstr ""
+msgstr "Carrega sempre el contingut web"
 
 #: src/qml/AbstractFeedEditorPage.qml:87
 msgctxt "AbstractFeedEditorPage|"
@@ -164,7 +164,7 @@ msgstr "Conserva com a no-llegit"
 #: src/qml/ArticlePage.qml:69
 msgctxt "ArticlePage|"
 msgid "Show Web Content"
-msgstr ""
+msgstr "Mostra el contingut web"
 
 #: src/qml/EditFeedPage.qml:21
 msgctxt "EditFeedPage|"
