--- a/po/es/syndic.po
+++ b/po/es/syndic.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: syndic-translate@rocksandpaper.com\n"
-"PO-Revision-Date: 2022-10-17 22:51+0000\n"
-"Last-Translator: Eduardo Malaspina <vaio0@swismail.com>\n"
+"PO-Revision-Date: 2023-01-25 21:08+0000\n"
+"Last-Translator: gallegonovato <fran-carro@hotmail.es>\n"
 "Language-Team: Spanish <https://hosted.weblate.org/projects/syndic/app/es/>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.15-dev\n"
+"X-Generator: Weblate 4.16-dev\n"
 "X-Qt-Contexts: true\n"
 
 #: src/qml/ArticleList/AbstractArticleListPage.qml:39
@@ -245,12 +245,12 @@ msgstr "Ejecutar en segundo plano"
 #: src/qml/SettingsPage.qml:74
 msgctxt "SettingsPage|"
 msgid "Download web content for offline viewing"
-msgstr ""
+msgstr "Descargar contenidos de la web para verlos sin conexión"
 
 #: src/qml/SettingsPage.qml:85
 msgctxt "SettingsPage|"
 msgid "Some web servers may not support this feature."
-msgstr ""
+msgstr "Es posible que algunos servidores web no admitan esta función."
 
 #: src/qml/SettingsPage.qml:92
 msgctxt "SettingsPage|"
