--- a/po/de/syndic.po
+++ b/po/de/syndic.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: syndic-translate@rocksandpaper.com\n"
-"PO-Revision-Date: 2022-10-24 17:39+0000\n"
+"PO-Revision-Date: 2023-01-29 21:31+0000\n"
 "Last-Translator: J. Lavoie <j.lavoie@net-c.ca>\n"
 "Language-Team: German <https://hosted.weblate.org/projects/syndic/app/de/>\n"
 "Language: de\n"
@@ -9,7 +9,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.14.2-dev\n"
+"X-Generator: Weblate 4.16-dev\n"
 "X-Qt-Contexts: true\n"
 
 #: src/qml/ArticleList/AbstractArticleListPage.qml:39
@@ -245,12 +245,12 @@ msgstr "Im Hintergrund ausführen"
 #: src/qml/SettingsPage.qml:74
 msgctxt "SettingsPage|"
 msgid "Download web content for offline viewing"
-msgstr ""
+msgstr "Webinhalte zur Offline-Anzeige herunterladen"
 
 #: src/qml/SettingsPage.qml:85
 msgctxt "SettingsPage|"
 msgid "Some web servers may not support this feature."
-msgstr ""
+msgstr "Einige Webserver unterstützen diese Funktion möglicherweise nicht."
 
 #: src/qml/SettingsPage.qml:92
 msgctxt "SettingsPage|"
