--- a/po/de/syndic.po
+++ b/po/de/syndic.po
@@ -12,6 +12,26 @@ msgstr ""
 "X-Generator: Weblate 4.17\n"
 "X-Qt-Contexts: true\n"
 
+#: src/qml/ArticleList/AbstractArticleListPage.qml:120
+msgctxt "AbstractArticleListPage|"
+msgid "Couldn't fetch feed from source"
+msgstr "Nachrichtenquelle konnte nicht abgerufen werden"
+
+#: src/qml/ArticleList/AbstractArticleListPage.qml:126
+msgctxt "AbstractArticleListPage|"
+msgid "Retry"
+msgstr "Nochmal versuchen"
+
+#: src/qml/ArticleList/AbstractArticleListPage.qml:139
+msgctxt "AbstractArticleListPage|"
+msgid "All Read"
+msgstr "Alle gelesen"
+
+#: src/qml/ArticleList/AbstractArticleListPage.qml:139
+msgctxt "AbstractArticleListPage|"
+msgid "No Items"
+msgstr "Keine Artikel"
+
 #: src/qml/AbstractFeedEditorPage.qml:33
 msgctxt "AbstractFeedEditorPage|"
 msgid "Feed Url:"
@@ -75,6 +95,11 @@ msgid_plural "%n day(s)"
 msgstr[0] "%n Tag"
 msgstr[1] "%n Tage"
 
+#: src/qml/Placeholders/AbstractPlaceholderPage.qml:16
+msgctxt "AbstractPlaceholderPage|"
+msgid "Select an item to view it here"
+msgstr "Wählen Sie einen Artikel aus, um ihn hier zu sehen"
+
 #: src/qml/AddFeedPage.qml:15
 msgctxt "AddFeedPage|"
 msgid "Add Content"
@@ -90,6 +115,37 @@ msgctxt "Application|"
 msgid "Syndic"
 msgstr "Syndic"
 
+#: src/qml/ArticlePage.qml:32
+msgctxt "ArticlePage|"
+msgid "Open"
+msgstr "Öffnen"
+
+#: src/qml/ArticlePage.qml:39
+msgctxt "ArticlePage|"
+msgid "Share"
+msgstr "Veröffentlichen"
+
+#: src/qml/ArticlePage.qml:47
+msgctxt "ArticlePage|"
+msgid "Starred"
+msgstr "Markiert"
+
+#. as in, don't mark this article as read
+#: src/qml/ArticlePage.qml:58
+msgctxt "ArticlePage|"
+msgid "Keep Unread"
+msgstr "Ungelesen lassen"
+
+#: src/qml/ArticlePage.qml:70
+msgctxt "ArticlePage|"
+msgid "Show Web Content"
+msgstr "Webinhalte anzeigen"
+
+#: src/qml/ArticlePage.qml:84
+msgctxt "ArticlePage|"
+msgid "Reload Web Content"
+msgstr "Webinhalt neu laden"
+
 #: src/qml/EditFeedPage.qml:21
 msgctxt "EditFeedPage|"
 msgid "Save"
@@ -100,6 +156,11 @@ msgctxt "EditFeedPage|"
 msgid "Delete"
 msgstr "Löschen"
 
+#: src/qml/Placeholders/ErrorPlaceholderPage.qml:19
+msgctxt "ErrorPlaceholderPage|"
+msgid "Retry"
+msgstr "Nochmal versuchen"
+
 #: src/feedlistmodel.cpp:161
 msgctxt "FeedListModel|special feed name"
 msgid "All Items"
@@ -109,6 +170,36 @@ msgstr "Alle Artikel"
 msgctxt "FeedListModel|special feed name"
 msgid "Starred Items"
 msgstr ""
+
+#: src/qml/ArticleList/FeedPage.qml:16
+msgctxt "FeedPage|"
+msgid "Mark All Read"
+msgstr ""
+
+#: src/qml/ArticleList/FeedPage.qml:26
+msgctxt "FeedPage|"
+msgid "Hide Read"
+msgstr ""
+
+#: src/qml/ArticleList/FeedPage.qml:35
+msgctxt "FeedPage|"
+msgid "Edit…"
+msgstr ""
+
+#: src/qml/ArticleList/FeedPage.qml:46
+msgctxt "FeedPage|"
+msgid "Refresh"
+msgstr ""
+
+#: src/qml/ArticleList/FeedPage.qml:58
+msgctxt "FeedPage|"
+msgid "Cancel"
+msgstr ""
+
+#: src/qml/ArticleList/FeedPreviewPage.qml:20
+msgctxt "FeedPreviewPage|"
+msgid "Subscribe"
+msgstr "Abonnieren"
 
 #: src/notificationcontroller.cpp:40
 msgctxt "NotificationController|system tray menu action"
@@ -122,6 +213,27 @@ msgid "%1 New Item(s)"
 msgid_plural "%1 New Item(s)"
 msgstr[0] "%1 neuen Artikel"
 msgstr[1] "%1 neue Artikel"
+
+#: src/qml/ArticleList/OverviewPage.qml:10
+msgctxt "OverviewPage|"
+msgid "Highlights"
+msgstr ""
+
+#: src/qml/ArticleList/OverviewPage.qml:71
+msgctxt "OverviewPage|"
+msgid "Gathering highlights..."
+msgstr ""
+
+#: src/qml/ArticleList/OverviewPage.qml:77
+msgctxt "OverviewPage|"
+msgid "Refresh"
+msgstr ""
+
+#: src/qml/ArticleList/SearchResultPage.qml:8
+#, qt-format
+msgctxt "SearchResultPage|"
+msgid "Search results for \"%1\""
+msgstr ""
 
 #: src/qml/SettingsPage.qml:16
 msgctxt "SettingsPage|"
@@ -234,25 +346,36 @@ msgctxt "SettingsPage|"
 msgid "Export…"
 msgstr "Exportieren …"
 
-#~ msgctxt "AbstractArticleListPage|"
-#~ msgid "All Read"
-#~ msgstr "Alle gelesen"
+#: src/qml/ArticleList/StarredItemsPage.qml:9
+msgctxt "StarredItemsPage|"
+msgid "Hide Read"
+msgstr ""
 
-#~ msgctxt "AbstractArticleListPage|"
-#~ msgid "No Items"
-#~ msgstr "Keine Artikel"
+#: src/qml/Placeholders/UpdatingPlaceholderPage.qml:10
+msgctxt "UpdatingPlaceholderPage|"
+msgid "Update in Progress"
+msgstr "Aktualisierung läuft"
 
-#~ msgctxt "AbstractArticleListPage|"
-#~ msgid "Couldn't fetch feed from source"
-#~ msgstr "Nachrichtenquelle konnte nicht abgerufen werden"
+#: src/qml/main.qml:113
+msgctxt "main|"
+msgid "Highlights"
+msgstr ""
 
-#~ msgctxt "AbstractArticleListPage|"
-#~ msgid "Retry"
-#~ msgstr "Nochmal versuchen"
+#: src/qml/main.qml:121
+msgctxt "main|"
+msgid "Add Content"
+msgstr "Inhalt hinzufügen"
 
-#~ msgctxt "AbstractPlaceholderPage|"
-#~ msgid "Select an item to view it here"
-#~ msgstr "Wählen Sie einen Artikel aus, um ihn hier zu sehen"
+#: src/qml/main.qml:128
+msgctxt "main|"
+msgid "Settings"
+msgstr "Einstellungen"
+
+#: src/qml/main.qml:135
+#, qt-format
+msgctxt "main|"
+msgid "About %1"
+msgstr "Über %1"
 
 #~ msgctxt "ArticleListPage|"
 #~ msgid "Mark All Read"
@@ -274,58 +397,9 @@ msgstr "Exportieren …"
 #~ msgid "Cancel"
 #~ msgstr "Abbrechen"
 
-#~ msgctxt "ArticlePage|"
-#~ msgid "Open"
-#~ msgstr "Öffnen"
-
-#~ msgctxt "ArticlePage|"
-#~ msgid "Share"
-#~ msgstr "Veröffentlichen"
-
-#~ msgctxt "ArticlePage|"
-#~ msgid "Starred"
-#~ msgstr "Markiert"
-
-#~ msgctxt "ArticlePage|"
-#~ msgid "Keep Unread"
-#~ msgstr "Ungelesen lassen"
-
-#~ msgctxt "ArticlePage|"
-#~ msgid "Show Web Content"
-#~ msgstr "Webinhalte anzeigen"
-
-#~ msgctxt "ArticlePage|"
-#~ msgid "Reload Web Content"
-#~ msgstr "Webinhalt neu laden"
-
-#~ msgctxt "ErrorPlaceholderPage|"
-#~ msgid "Retry"
-#~ msgstr "Nochmal versuchen"
-
 #~ msgctxt "FeedListModel|special feed name"
 #~ msgid "Starred"
 #~ msgstr "Markiert"
-
-#~ msgctxt "FeedPreviewPage|"
-#~ msgid "Subscribe"
-#~ msgstr "Abonnieren"
-
-#~ msgctxt "UpdatingPlaceholderPage|"
-#~ msgid "Update in Progress"
-#~ msgstr "Aktualisierung läuft"
-
-#~ msgctxt "main|"
-#~ msgid "Add Content"
-#~ msgstr "Inhalt hinzufügen"
-
-#~ msgctxt "main|"
-#~ msgid "Settings"
-#~ msgstr "Einstellungen"
-
-#, qt-format
-#~ msgctxt "main|"
-#~ msgid "About %1"
-#~ msgstr "Über %1"
 
 #~ msgctxt "ArticleListPage|"
 #~ msgid "Clear"
