--- a/po/nb_NO/syndic.po
+++ b/po/nb_NO/syndic.po
@@ -12,6 +12,26 @@ msgstr ""
 "X-Generator: Weblate 4.13.1-dev\n"
 "X-Qt-Contexts: true\n"
 
+#: src/qml/ArticleList/AbstractArticleListPage.qml:120
+msgctxt "AbstractArticleListPage|"
+msgid "Couldn't fetch feed from source"
+msgstr "Kunne ikke hente informasjonskanal fra kilden"
+
+#: src/qml/ArticleList/AbstractArticleListPage.qml:126
+msgctxt "AbstractArticleListPage|"
+msgid "Retry"
+msgstr "Prøv igjen"
+
+#: src/qml/ArticleList/AbstractArticleListPage.qml:139
+msgctxt "AbstractArticleListPage|"
+msgid "All Read"
+msgstr "Alle leste"
+
+#: src/qml/ArticleList/AbstractArticleListPage.qml:139
+msgctxt "AbstractArticleListPage|"
+msgid "No Items"
+msgstr "Ingen elementer"
+
 #: src/qml/AbstractFeedEditorPage.qml:33
 msgctxt "AbstractFeedEditorPage|"
 msgid "Feed Url:"
@@ -75,6 +95,11 @@ msgid_plural "%n day(s)"
 msgstr[0] "%n dag"
 msgstr[1] "%n dager"
 
+#: src/qml/Placeholders/AbstractPlaceholderPage.qml:16
+msgctxt "AbstractPlaceholderPage|"
+msgid "Select an item to view it here"
+msgstr "Velg et element for å vise det her"
+
 #: src/qml/AddFeedPage.qml:15
 msgctxt "AddFeedPage|"
 msgid "Add Content"
@@ -90,6 +115,37 @@ msgctxt "Application|"
 msgid "Syndic"
 msgstr "Syndic"
 
+#: src/qml/ArticlePage.qml:32
+msgctxt "ArticlePage|"
+msgid "Open"
+msgstr "Åpne"
+
+#: src/qml/ArticlePage.qml:39
+msgctxt "ArticlePage|"
+msgid "Share"
+msgstr "Del"
+
+#: src/qml/ArticlePage.qml:47
+msgctxt "ArticlePage|"
+msgid "Starred"
+msgstr "Stjernemerket"
+
+#. as in, don't mark this article as read
+#: src/qml/ArticlePage.qml:58
+msgctxt "ArticlePage|"
+msgid "Keep Unread"
+msgstr "Behold ulest"
+
+#: src/qml/ArticlePage.qml:70
+msgctxt "ArticlePage|"
+msgid "Show Web Content"
+msgstr ""
+
+#: src/qml/ArticlePage.qml:84
+msgctxt "ArticlePage|"
+msgid "Reload Web Content"
+msgstr ""
+
 #: src/qml/EditFeedPage.qml:21
 msgctxt "EditFeedPage|"
 msgid "Save"
@@ -100,6 +156,11 @@ msgctxt "EditFeedPage|"
 msgid "Delete"
 msgstr "Slett"
 
+#: src/qml/Placeholders/ErrorPlaceholderPage.qml:19
+msgctxt "ErrorPlaceholderPage|"
+msgid "Retry"
+msgstr "Prøv igjen"
+
 #: src/feedlistmodel.cpp:161
 msgctxt "FeedListModel|special feed name"
 msgid "All Items"
@@ -109,6 +170,36 @@ msgstr "Alle elementer"
 msgctxt "FeedListModel|special feed name"
 msgid "Starred Items"
 msgstr ""
+
+#: src/qml/ArticleList/FeedPage.qml:16
+msgctxt "FeedPage|"
+msgid "Mark All Read"
+msgstr ""
+
+#: src/qml/ArticleList/FeedPage.qml:26
+msgctxt "FeedPage|"
+msgid "Hide Read"
+msgstr ""
+
+#: src/qml/ArticleList/FeedPage.qml:35
+msgctxt "FeedPage|"
+msgid "Edit…"
+msgstr ""
+
+#: src/qml/ArticleList/FeedPage.qml:46
+msgctxt "FeedPage|"
+msgid "Refresh"
+msgstr ""
+
+#: src/qml/ArticleList/FeedPage.qml:58
+msgctxt "FeedPage|"
+msgid "Cancel"
+msgstr ""
+
+#: src/qml/ArticleList/FeedPreviewPage.qml:20
+msgctxt "FeedPreviewPage|"
+msgid "Subscribe"
+msgstr "Abonner"
 
 #: src/notificationcontroller.cpp:40
 msgctxt "NotificationController|system tray menu action"
@@ -122,6 +213,27 @@ msgid "%1 New Item(s)"
 msgid_plural "%1 New Item(s)"
 msgstr[0] "%1 nytt element"
 msgstr[1] "%1 nye elementer"
+
+#: src/qml/ArticleList/OverviewPage.qml:10
+msgctxt "OverviewPage|"
+msgid "Highlights"
+msgstr ""
+
+#: src/qml/ArticleList/OverviewPage.qml:71
+msgctxt "OverviewPage|"
+msgid "Gathering highlights..."
+msgstr ""
+
+#: src/qml/ArticleList/OverviewPage.qml:77
+msgctxt "OverviewPage|"
+msgid "Refresh"
+msgstr ""
+
+#: src/qml/ArticleList/SearchResultPage.qml:8
+#, qt-format
+msgctxt "SearchResultPage|"
+msgid "Search results for \"%1\""
+msgstr ""
 
 #: src/qml/SettingsPage.qml:16
 msgctxt "SettingsPage|"
@@ -234,25 +346,36 @@ msgctxt "SettingsPage|"
 msgid "Export…"
 msgstr "Eksporter …"
 
-#~ msgctxt "AbstractArticleListPage|"
-#~ msgid "All Read"
-#~ msgstr "Alle leste"
+#: src/qml/ArticleList/StarredItemsPage.qml:9
+msgctxt "StarredItemsPage|"
+msgid "Hide Read"
+msgstr ""
 
-#~ msgctxt "AbstractArticleListPage|"
-#~ msgid "No Items"
-#~ msgstr "Ingen elementer"
+#: src/qml/Placeholders/UpdatingPlaceholderPage.qml:10
+msgctxt "UpdatingPlaceholderPage|"
+msgid "Update in Progress"
+msgstr "Oppdaterer …"
 
-#~ msgctxt "AbstractArticleListPage|"
-#~ msgid "Couldn't fetch feed from source"
-#~ msgstr "Kunne ikke hente informasjonskanal fra kilden"
+#: src/qml/main.qml:113
+msgctxt "main|"
+msgid "Highlights"
+msgstr ""
 
-#~ msgctxt "AbstractArticleListPage|"
-#~ msgid "Retry"
-#~ msgstr "Prøv igjen"
+#: src/qml/main.qml:121
+msgctxt "main|"
+msgid "Add Content"
+msgstr "Legg til innhold"
 
-#~ msgctxt "AbstractPlaceholderPage|"
-#~ msgid "Select an item to view it here"
-#~ msgstr "Velg et element for å vise det her"
+#: src/qml/main.qml:128
+msgctxt "main|"
+msgid "Settings"
+msgstr "Innstillinger"
+
+#: src/qml/main.qml:135
+#, qt-format
+msgctxt "main|"
+msgid "About %1"
+msgstr "Om %1"
 
 #~ msgctxt "ArticleListPage|"
 #~ msgid "Mark All Read"
@@ -274,50 +397,9 @@ msgstr "Eksporter …"
 #~ msgid "Cancel"
 #~ msgstr "Avbryt"
 
-#~ msgctxt "ArticlePage|"
-#~ msgid "Open"
-#~ msgstr "Åpne"
-
-#~ msgctxt "ArticlePage|"
-#~ msgid "Share"
-#~ msgstr "Del"
-
-#~ msgctxt "ArticlePage|"
-#~ msgid "Starred"
-#~ msgstr "Stjernemerket"
-
-#~ msgctxt "ArticlePage|"
-#~ msgid "Keep Unread"
-#~ msgstr "Behold ulest"
-
-#~ msgctxt "ErrorPlaceholderPage|"
-#~ msgid "Retry"
-#~ msgstr "Prøv igjen"
-
 #~ msgctxt "FeedListModel|special feed name"
 #~ msgid "Starred"
 #~ msgstr "Stjernemerket"
-
-#~ msgctxt "FeedPreviewPage|"
-#~ msgid "Subscribe"
-#~ msgstr "Abonner"
-
-#~ msgctxt "UpdatingPlaceholderPage|"
-#~ msgid "Update in Progress"
-#~ msgstr "Oppdaterer …"
-
-#~ msgctxt "main|"
-#~ msgid "Add Content"
-#~ msgstr "Legg til innhold"
-
-#~ msgctxt "main|"
-#~ msgid "Settings"
-#~ msgstr "Innstillinger"
-
-#, qt-format
-#~ msgctxt "main|"
-#~ msgid "About %1"
-#~ msgstr "Om %1"
 
 #~ msgctxt "ArticleListPage|"
 #~ msgid "Clear"
