Add back old translations for previously removed strings

--- a/po/en/syndic.po
+++ b/po/en/syndic.po
@@ -23,7 +23,7 @@ msgstr ""
 #: src/qml/ArticleList/AbstractArticleListPage.qml:139
 msgctxt "AbstractArticleListPage|"
 msgid "No Items"
-msgstr ""
+msgstr "%n New Item"
 
 #: src/qml/AbstractFeedEditorPage.qml:33
 msgctxt "AbstractFeedEditorPage|"
